1.2.b QA [System - Registration] - Sign up button is cut off when tried to reg with email address - Fixed.

--- a/src/main/java/org/ednovo/gooru/client/mvp/authentication/SignUp.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/authentication/SignUp.css
@@ -837,7 +837,7 @@ input.halfSize {
 
 #btnSignUp{
 	margin-top: 15px;
-	margin-bottom: 15px;	
+	/* margin-bottom: 15px; */	
 }
 
 #tbBirthday{
