--- a/src/main/java/org/ednovo/gooru/client/mvp/home/Home.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/home/Home.css
@@ -3030,3 +3030,12 @@ color: #ffffff !important;
 	cursor: pointer;
 }
 
+
+.caption p div#htmlDescription{
+	font-size: 12px;
+}
+
+.caption p button#btnHomeSignUp {
+	font-size: 18px;
+	margin-top: 10px;
+}
