--- a/src/main/java/org/ednovo/gooru/client/mvp/home/Newlogin-popup.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/home/Newlogin-popup.css
@@ -123,7 +123,7 @@ body {
 }
 
 .LoginpopupContent {
-	padding: 30px 75px;
+	padding: 10px 75px;
 }
 
 .LoginPopUpgreen {
@@ -976,7 +976,7 @@ width: 100%;
 }
 
 .shareSelection{
-	margin:10px 35px;
+	padding:10px 35px;
 }
 
 .shareSelection textarea.form-control{
