--- a/src/main/java/org/ednovo/gooru/client/mvp/home/res_loginpopup1.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/home/res_loginpopup1.css
@@ -97,7 +97,7 @@
     text-align: center;
 }
 .shareSelection{
-	margin:10px 10px;
+	padding:10px 10px;
 }
 .improveGooruLinkDesc{
 	text-align:center;
@@ -134,7 +134,7 @@
 }
 
 .shareSelection{
-	margin:10px 10px;
+	padding:10px 10px;
 }
 .emailSelection{
 	margin:5px 5px;
